Fixed minor issues regarding nav spacing + font
Fixed minor issues regarding nav spacing + font

--- a/css/SAA.css
+++ b/css/SAA.css
@@ -7,7 +7,7 @@
 
 li {
     color: #717171;
-    font-family: 'Open Sans';
+    /* font-family: 'Open Sans'; */
 }
 
 
